...
    },
    "Carte tiers-payant": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Direct billing card"
          }
        }
      }
    },
    "Carte tiers-payant, remboursements et réseau de soins dans votre poche.": {
      "localizations": {
...
    },
    "Connexion": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Sign in"
          }
        }
      }
    },
    "Consommé": {
      "localizations": {
...
    },
    "Plafond disponible": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Remaining limit"
          }
        }
      }
    },
    "Plusieurs pages ? Scannez-les à la suite": {
      "localizations": {
...
            "state": "translated",
            "value": "Product"
          }
        }
      }
    },
    "Profil": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Profile"
          }
...
    },
    "Sinistres": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Claims"
          }
        }
      }
    },
    "Sombre": {
      "localizations": {
...
